Feature: Home page atualizada e header deslogado novo

--- a/notes-frontend/src/components/card-disciplinas/index.css
+++ b/notes-frontend/src/components/card-disciplinas/index.css
@@ -11,10 +11,11 @@
 
 .subjects{
   background:var(--panel);
-  padding:32px 0 56px;
+  padding:2px 0 56px;
 }
 .subjects__container{
   max-width:1240px;margin:0 auto;padding:0 20px;
+  margin-bottom: 7%
 }
 .subjects__header{margin-bottom:12px}
 .subjects__title{
